# parallax_cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: gnsac-config-version.cmake.in  gnsac-config.cmake.in  gnsac_uninstall.cmake.in
include/: common.h
include/gnsac/common/: comm_loaders.h  comm_math.h  common.h  solvers.h
include/gnsac/five_point_opencv/: calib3d.hpp  preempt.hpp
include/gnsac/parallax_detector/: parallax_detector.h
include/gnsac/solvers/: gnsac_eigen.h  gnsac_ptr_eig.h  gnsac_ptr_ocv.h
include/ptr/: GN_step.h
lib/5_point/src/: five-point.cpp  levmarq.cpp  preemptiveRANSAC.cpp
lib/common/include/: comm_loaders.h  comm_math.h  common.h  solvers.h
lib/common/src/: comm_loaders.cpp  comm_math.cpp  common.cpp  quaternion.cpp  solvers.cpp
lib/five_point_opencv/include/: calib3d.hpp  precomp.hpp  preempt.hpp
lib/five_point_opencv/src/: five-point.cpp  levmarq.cpp  preempt.cpp  ptsetreg.cpp
lib/gnsac_eigen/include/: gnsac_eigen.h
lib/gnsac_eigen/src/: gnsac_eigen.cpp
lib/gnsac_ptr_eigen/include/: gnsac_ptr_eig.h
lib/gnsac_ptr_eigen/src/: determinism_test.cpp  gnsac_ptr_eig.cpp
lib/gnsac_ptr_opencv/include/: gnsac_ptr_ocv.h
lib/gnsac_ptr_opencv/src/: determinism_test.cpp  gnsac_ptr_ocv.cpp
matlab/: README.md  accuracy.m  chierality.m  compare_to_5P.m  consensus.m  consensus_alg.m  consensus_iters.m  convergence.m  count_hypotheses.m  debug_unit_tests.m  estimate.m  hypotheses.m  lambda.m  log_test.m  optimizer_conv.m  optimizer_cost.m  optimizer_noise.m  plot_comparison.m  ransac.m  read_binary.m  refinement.m  renormalize.m  scoring_cost.m  subsets.m  timing.m  timing_verbose.m
matlab/figures/: accuracy_frame_err.fig  consensus_alg.eps  consensus_alg.fig  gn_lm_convergence.fig  gn_lm_step_size.fig  lambda1.eps  lambda1.fig  lambda2.eps  lambda2.fig  lmeds_iters_err.fig  lmeds_ransac_threshold.fig  lmeds_time_err.fig  verbose_timing.fig  verbose_timing_gn_lm.fig  verbose_timing_opencv.fig
param/solvers/: gn_eigen.yaml  gn_eigen_chierality.yaml  gn_eigen_no_chierality.yaml  gn_eigen_no_exit.yaml  gn_eigen_no_prior.yaml  gn_eigen_no_seed.yaml  gn_eigen_random.yaml  gn_eigen_single.yaml  gn_eigen_trace.yaml  lm_eigen.yaml  lm_eigen_no_exit.yaml  lm_eigen_no_prior.yaml  lm_eigen_no_seed.yaml  poly_opencv.yaml  poly_opencv_chierality.yaml  poly_opencv_no_chierality.yaml  poly_opencv_trace.yaml
param/tests/: README.md  chierality.yaml  comparison.yaml  consensus.yaml  optimizer.yaml  standard.yaml
param/tests/chierality/: gn_eigen_chierality.yaml  gn_eigen_no_chierality.yaml  gn_eigen_trace.yaml  lm_eigen_chierality.yaml  lm_eigen_no_chierality.yaml  lm_eigen_normalize.yaml  lm_eigen_trace.yaml  poly_opencv_chierality.yaml  poly_opencv_no_chierality.yaml
param/tests/consensus/: consensus.yaml  gn_eigen_lmeds.yaml  gn_eigen_ransac.yaml  lm_eigen_lmeds.yaml  lm_eigen_ransac.yaml  poly_opencv_lmeds.yaml  poly_opencv_ransac.yaml
param/tests/consensus_iters/: consensus_iters.yaml  poly_opencv.yaml
param/tests/consensus_iters1000/: consensus_iters1000.yaml  lm_eigen_prior.yaml  lm_eigen_random.yaml  lm_eigen_random_recursive.yaml
param/tests/consensus_iters200/: consensus_iters200.yaml
param/tests/iterative/: gn_eigen.yaml  poly_opencv.yaml  timing.yaml
param/tests/lambda/: lambda.yaml  lambda1.yaml  lambda10.yaml  lambda2.yaml  lambda3.yaml  lambda4.yaml  lambda5.yaml  lambda6.yaml  lambda7.yaml  lambda8.yaml  lambda9.yaml
param/tests/lambda_sweep/: lambda_sweep.yaml
param/tests/opencv_subsets_sweep/: opencv_subsets_sweep.yaml  poly_opencv_trace.yaml
param/tests/optimizer/: optimizer.yaml
param/tests/optimizer_cost/: gn_eigen_sampson.yaml  gn_eigen_single.yaml  lm_eigen_algebraic.yaml  lm_eigen_sampson.yaml  lm_eigen_single.yaml  optimizer_cost.yaml
param/tests/optimizer_seed_noise_sweep/: optimizer_seed_noise_sweep.yaml
param/tests/optimizer_seed_noise_sweep_tmp/: optimizer_seed_noise_sweep.yaml
param/tests/ransac/: gn_lmeds.yaml  gn_ransac1.yaml  gn_ransac10.yaml  gn_ransac2.yaml  gn_ransac3.yaml  gn_ransac4.yaml  gn_ransac5.yaml  gn_ransac6.yaml  gn_ransac7.yaml  gn_ransac8.yaml  gn_ransac9.yaml  lm_lmeds.yaml  lm_ransac1.yaml  lm_ransac10.yaml  lm_ransac2.yaml  lm_ransac3.yaml  lm_ransac4.yaml  lm_ransac5.yaml  lm_ransac6.yaml  lm_ransac7.yaml  lm_ransac8.yaml  lm_ransac9.yaml  ransac.yaml
param/tests/ransac_sweep/: gn_ransac.yaml  lm_ransac.yaml  ransac_sweep.yaml
param/tests/recursive/: gn_eigen_prior.yaml  gn_eigen_random_recursive.yaml  gn_eigen_sampson.yaml  lm_eigen_prior_recursive.yaml  lm_eigen_random.yaml  lm_eigen_random_recursive.yaml
param/tests/recursive1000/: gn_eigen_algebraic.yaml  gn_eigen_prior_recursive.yaml  gn_eigen_random_recursive.yaml  lm_eigen_prior.yaml  lm_eigen_prior_recursive.yaml
param/tests/recursive_subsets_sweep/: gn_eigen_prior.yaml  gn_eigen_prior_recursive.yaml  gn_eigen_random.yaml
param/tests/refinement/: lm_eigen.yaml  lm_refine.yaml  refinement.yaml
param/tests/renormalize/: renormalize.yaml
param/tests/scoring_cost/: gn_eigen_algebraic.yaml  gn_eigen_sampson.yaml  gn_eigen_single.yaml  lm_eigen_algebraic.yaml  lm_eigen_sampson.yaml  lm_eigen_single.yaml  scoring_cost.yaml
param/tests/standard/: standard.yaml
param/tests/subsets/: poly_opencv.yaml  subsets.yaml
params/: dji.yaml  egtest05.yaml  holodeck.yaml
params/solvers/: chierality.yaml  five-point.yaml  five_point_opencv.yaml  gn.yaml  gn_eigen.yaml  gnsac_ptr_eigen.yaml  gnsac_ptr_eigen_gn.yaml  gnsac_ptr_eigen_lm.yaml  gnsac_ptr_opencv.yaml  lm.yaml
src/: cli.cpp  common.cpp  main.cpp  quaternion.cpp  test.cpp
src/5_point/: preempt.cpp
src/common/: comm_loaders.cpp  comm_math.cpp  common.cpp  solvers.cpp
src/five_point_opencv/: five-point.cpp  levmarq.cpp  preempt.cpp  ptsetreg.cpp
src/parallax_detector/: parallax_detector.cpp
src/ptr/: GN_step.cpp
src/solvers/: gnsac_eigen.cpp  gnsac_ptr_eig.cpp  gnsac_ptr_eigen_determinism_test.cpp  gnsac_ptr_ocv.cpp  gnsac_ptr_opencv_determinism_test.cpp
test/: CMakeLists.txt
test/param/: test_param.yaml
test/src/: parallax_test.cpp
(+12 files in other folders)
